src/objects/RevenuePropertyWellAllocation__c.object
<CustomObject>
    <fields>
        <fullName>revenueProperty__c</fullName>
        <label>Revenue Property</label>
        <referenceTo>revenueProperty__c</referenceTo>
        <relationshipLabel>Revenue Property Well Allocations</relationshipLabel>
        <relationshipName>Revenue_Property_Well_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>splitPercent__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Percentage of revenue applied to well</description>
        <inlineHelpText>Percentage of revenue applied to well</inlineHelpText>
        <label>Split Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uid__c</fullName>
        <description>Unique key concatenation of revenue property and well</description>
        <formula>revenueProperty__c + &quot;|&quot; + well__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique key concatenation of revenue property and well</inlineHelpText>
        <label>UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>well__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Well</label>
        <referenceTo>Well__c</referenceTo>
        <relationshipLabel>Revenue Property Well Allocations</relationshipLabel>
        <relationshipName>Revenue_Property_Well_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Revenue Property Well Allocation</label>
    <nameField>
        <displayFormat>RPW-{000000000}</displayFormat>
        <label>Revenue Property Well Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Property Well Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>